[gd_scene load_steps=17 format=2]

[ext_resource path="res://Entities/Enemies/Humans/HumanProducer.gd" type="Script" id=1]
[ext_resource path="res://Entities/Enemies/Humans/HumanProducerShooter.tscn" type="PackedScene" id=2]
[ext_resource path="res://Entities/Enemies/Humans/HumanProducerDefender.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Enemies/Human Producer/HumanProducerBig.png" type="Texture" id=4]
[ext_resource path="res://Entities/Enemies/Humans/HumanDeathParticles.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Effects/ball - orange.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sounds/HumanProducer/prodCreationSound1.wav" type="AudioStream" id=7]
[ext_resource path="res://Assets/Sounds/HumanProducer/prodCreationSound2.wav" type="AudioStream" id=8]
[ext_resource path="res://Assets/Sounds/HumanShooter/shooterDeath.wav" type="AudioStream" id=9]
[ext_resource path="res://Entities/Shared/Behaviors/FlashOnHurt.tscn" type="PackedScene" id=10]
[ext_resource path="res://Entities/Shared/Behaviors/ScreenWrapBehavior.tscn" type="PackedScene" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 25.7664, 7.15446 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 35.1034, 25.6774 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 14.6409, 85.376 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 38.8138, 8.06191 )

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0.00250607, 0.9988 ), 0.0, 0.0, 0, 0, Vector2( 0.514214, 0.00767672 ), 0.0, 0.0, 0, 0 ]

[node name="HumanProducer" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 6
script = ExtResource( 1 )
AttackBot = ExtResource( 2 )
DefenseBot = ExtResource( 3 )

[node name="Sprites" type="Node2D" parent="."]
scale = Vector2( 0.08, 0.08 )

[node name="Sprite" type="Sprite" parent="Sprites"]
texture = ExtResource( 4 )

[node name="Rear" type="CollisionShape2D" parent="."]
position = Vector2( 0, -47 )
shape = SubResource( 1 )

[node name="Base" type="CollisionShape2D" parent="."]
position = Vector2( 0, -15 )
shape = SubResource( 2 )

[node name="Wings" type="CollisionShape2D" parent="."]
position = Vector2( 0, 25 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="Front" type="CollisionShape2D" parent="."]
position = Vector2( 0, 46 )
shape = SubResource( 4 )

[node name="SpawnMain" type="Node2D" parent="."]
z_index = 50

[node name="SpawnMove" type="Node2D" parent="."]
position = Vector2( 0, 80 )
z_index = 50

[node name="DeathNodes" type="Node2D" parent="."]

[node name="HumanDeathParticles" parent="DeathNodes" instance=ExtResource( 5 )]

[node name="WaitAfterDeath" type="Timer" parent="DeathNodes"]
one_shot = true

[node name="DeathParticles2" type="CPUParticles2D" parent="DeathNodes"]
visible = false
emitting = false
amount = 10
one_shot = true
explosiveness = 1.0
texture = ExtResource( 6 )
emission_shape = 2
emission_rect_extents = Vector2( 30, 26 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 80.0
damping = 10.0
scale_amount = 1.5
scale_amount_curve = SubResource( 5 )

[node name="Timers" type="Node" parent="."]

[node name="Wait" type="Timer" parent="Timers"]
one_shot = true

[node name="StutterProduction" type="Timer" parent="Timers"]
one_shot = true

[node name="WaitAfterProduce" type="Timer" parent="Timers"]
one_shot = true

[node name="Sounds" type="Node2D" parent="."]

[node name="ProduceOne" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 7 )
volume_db = -25.0

[node name="ProduceTwo" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 8 )
volume_db = -25.0
attenuation = 0.287175

[node name="Death" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 9 )
volume_db = -15.0

[node name="FlashOnHurt" parent="." instance=ExtResource( 10 )]

[node name="ScreenWrap" parent="." instance=ExtResource( 11 )]
buffer = 10.0

[connection signal="timeout" from="DeathNodes/WaitAfterDeath" to="." method="_on_WaitAfterDeath_timeout"]
[connection signal="timeout" from="Timers/Wait" to="." method="_on_Wait_timeout"]
[connection signal="timeout" from="Timers/StutterProduction" to="." method="_on_StutterProduction_timeout"]
[connection signal="timeout" from="Timers/WaitAfterProduce" to="." method="_on_WaitAfterProduce_timeout"]
